# behave-modern-html-report

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
behave_modern_html_report/: __init__.py  assets.py  attach.py  collector.py  formatter.py  models.py  renderer.py  statistics.py  step_catalog_formatter.py  step_scanner.py  utils.py
behave_modern_html_report/assets/css/: report.css
behave_modern_html_report/assets/js/: charts.js  report.js  step_catalog.js
behave_modern_html_report/templates/: report.html.jinja  step_catalog.html.jinja
behave_modern_html_report/templates/components/: _scenario_item.html.jinja  dashboard.html.jinja  environment.html.jinja  feature.html.jinja  icons.html.jinja  results.html.jinja  rules.html.jinja  scenario.html.jinja  statistics.html.jinja  tags.html.jinja
behave_modern_report/: __init__.py  assets.py  attach.py  collector.py  formatter.py  models.py  renderer.py  statistics.py
behave_modern_report/assets/css/: report.css
behave_modern_report/assets/js/: report.js
behave_modern_report/templates/: report.html.jinja
behave_modern_report/templates/components/: _scenario_item.html.jinja  environment.html.jinja  feature.html.jinja  icons.html.jinja  scenario.html.jinja  statistics.html.jinja  step.html.jinja
docs/: architecture.md  configuration.md  contributing.md  examples.md  usage.md  views.md
examples/: behave.ini  generate_demo.py
examples/behave_project/: README.md  behave.ini  environment.py  requirements.txt
examples/behave_project/features/: checkout.feature
examples/behave_project/features/steps/: checkout_steps.py  login_steps.py  reporting_steps.py
examples/behave_project/reports/: demo.html
examples/demo_generator/: demo-report.html  generate_demo.py  step-catalog-demo.html
examples/features/: example.feature
examples/features/steps/: example_steps.py
scripts/: screenshots.py
tests/: __init__.py  conftest.py  test_attach.py  test_collector.py  test_models.py  test_renderer.py  test_statistics.py  test_step_scanner.py  test_utils.py
