[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "behave-modern-report"
version = "0.1.0"
description = "The modern, beautiful, single-file HTML report formatter for Behave."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Mathias Paulenko", email = "mathias.paulenko@outlook.com" }]
maintainers = [{ name = "Mathias Paulenko", email = "mathias.paulenko@outlook.com" }]
keywords = ["behave", "bdd", "html", "report", "formatter", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing :: BDD",
]
dependencies = [
    "behave>=1.2.6,<2",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.0",
]

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/behave-modern-report"
Repository = "https://github.com/MathiasPaulenko/behave-modern-report"
Issues = "https://github.com/MathiasPaulenko/behave-modern-report/issues"

[project.entry-points."behave.formatters"]
modern = "behave_modern_report.formatter:ModernHTMLFormatter"

[tool.hatch.build.targets.wheel]
# `packages` already ships every file (Python, .css, .js, .jinja, .svg, …) inside
# the package directory — no `force-include` needed.
packages = ["behave_modern_report"]

[tool.hatch.build.targets.sdist]
include = [
    "behave_modern_report",
    "tests",
    "examples",
    "docs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
